--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.2",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.2",
     "@angular/compiler": "~9.1.2",
     "@angular/core": "~9.1.2",
     "@angular/forms": "~9.1.2",
+    "@angular/localize": "~9.1.2",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.2",
     "@angular/platform-browser-dynamic": "~9.1.2",
     "@angular/router": "~9.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "mongoose": "^5.9.23",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
